<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>MultiProjectPage</class>
 <widget class="QWidget" name="MultiProjectPage">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>494</width>
    <height>359</height>
   </rect>
  </property>
  <layout class="QVBoxLayout" name="verticalLayout">
   <item>
    <widget class="QLabel" name="headerLabel">
     <property name="text">
      <string>&lt;b&gt;Configure multiproject settings&lt;/b&gt;</string>
     </property>
    </widget>
   </item>
   <item>
    <widget class="Line" name="line8">
     <property name="frameShape">
      <enum>QFrame::HLine</enum>
     </property>
     <property name="frameShadow">
      <enum>QFrame::Sunken</enum>
     </property>
     <property name="orientation">
      <enum>Qt::Horizontal</enum>
     </property>
    </widget>
   </item>
   <item>
    <widget class="QGroupBox" name="groupBox_2">
     <property name="title">
      <string>Workspace</string>
     </property>
     <layout class="QHBoxLayout" name="horizontalLayout">
      <item>
       <widget class="QLineEdit" name="workspaceEdit">
        <property name="toolTip">
         <string>Enter the name of the workspace directory</string>
        </property>
        <property name="whatsThis">
         <string>&lt;b&gt;Workspace Directory&lt;/b&gt;
&lt;p&gt;Enter the directory of the workspace. This directory is used as the default for opening or saving new files or projects.&lt;/p&gt;</string>
        </property>
       </widget>
      </item>
      <item>
       <widget class="QToolButton" name="workspaceButton">
        <property name="toolTip">
         <string>Select the workspace directory via a directory selection button</string>
        </property>
       </widget>
      </item>
     </layout>
    </widget>
   </item>
   <item>
    <widget class="QGroupBox" name="groupBox">
     <property name="title">
      <string>Master Project</string>
     </property>
     <layout class="QVBoxLayout">
      <item>
       <widget class="QCheckBox" name="openMasterAutomaticallyCheckBox">
        <property name="toolTip">
         <string>Select to open the master project automatically upon opening the multiproject</string>
        </property>
        <property name="text">
         <string>Open master project automatically</string>
        </property>
       </widget>
      </item>
     </layout>
    </widget>
   </item>
   <item>
    <widget class="QGroupBox" name="groupBox_6">
     <property name="title">
      <string>XML</string>
     </property>
     <layout class="QVBoxLayout">
      <item>
       <widget class="QCheckBox" name="multiProjectTimestampCheckBox">
        <property name="toolTip">
         <string>Select, if a timestamp should be written to all multiproject related XML files</string>
        </property>
        <property name="text">
         <string>Include timestamp in multiproject related XML files</string>
        </property>
       </widget>
      </item>
     </layout>
    </widget>
   </item>
   <item>
    <widget class="QGroupBox" name="groupBox_7">
     <property name="title">
      <string>Recent Multiprojects</string>
     </property>
     <layout class="QVBoxLayout">
      <item>
       <layout class="QHBoxLayout">
        <item>
         <widget class="QLabel" name="label">
          <property name="text">
           <string>Number of recent multiprojects:</string>
          </property>
         </widget>
        </item>
        <item>
         <widget class="QSpinBox" name="multiProjectRecentSpinBox">
          <property name="toolTip">
           <string>Enter the number of recent multiprojects to remember</string>
          </property>
          <property name="alignment">
           <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
          </property>
          <property name="minimum">
           <number>5</number>
          </property>
          <property name="maximum">
           <number>50</number>
          </property>
         </widget>
        </item>
        <item>
         <spacer>
          <property name="orientation">
           <enum>Qt::Horizontal</enum>
          </property>
          <property name="sizeHint" stdset="0">
           <size>
            <width>40</width>
            <height>20</height>
           </size>
          </property>
         </spacer>
        </item>
       </layout>
      </item>
     </layout>
    </widget>
   </item>
   <item>
    <spacer>
     <property name="orientation">
      <enum>Qt::Vertical</enum>
     </property>
     <property name="sizeHint" stdset="0">
      <size>
       <width>20</width>
       <height>40</height>
      </size>
     </property>
    </spacer>
   </item>
  </layout>
 </widget>
 <tabstops>
  <tabstop>workspaceEdit</tabstop>
  <tabstop>workspaceButton</tabstop>
  <tabstop>openMasterAutomaticallyCheckBox</tabstop>
  <tabstop>multiProjectTimestampCheckBox</tabstop>
  <tabstop>multiProjectRecentSpinBox</tabstop>
 </tabstops>
 <resources/>
 <connections/>
</ui>
